@@ -1,3 +1,4 @@
+	* fix bug in python binding for file_progress on torrents with no metadata
 	* fix assert when removing a connected web seed
 	* fix bug in tracker timeout logic
 	* switch UPnP post back to HTTP 1.1
